# ArchiveWatch

./: .gitignore  LICENSE.md  README.md  pyproject.toml
archive_watch/core/common/: constants.py
archive_watch/core/errors/: __init__.py  files.py
archive_watch/core/utility/: file_path.py
